--- a/src/main/resources/template/velocity/bootstrap/datatables/BootstrapDataTableJsp.vm
+++ b/src/main/resources/template/velocity/bootstrap/datatables/BootstrapDataTableJsp.vm
@@ -71,7 +71,7 @@
 				</div>
 	      	</div>
 		</div>
-		<div class="panel-heading">
+		<div class="panel-footer">
 	    	<div class="row">
 	    		<div class="col-lg-offset-10 col-lg-2">
 	    			<a class="btn btn-primary ${entity.entityBeanName}query" href="#" role="button">查询</a>
