--- a/src/main/resources/template/velocity/bootstrap/datatables/BootstrapDataTableJsp.vm
+++ b/src/main/resources/template/velocity/bootstrap/datatables/BootstrapDataTableJsp.vm
@@ -1,8 +1,9 @@
-<%@ page language="java" contentType="text/html; charset=utf-8" pageEncoding="utf-8"%>
+<%@page language="java" contentType="text/html; charset=utf-8" pageEncoding="utf-8"%>
 <%@taglib uri="http://www.springframework.org/tags" prefix="spring"%>
 <%@taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
-<%@ taglib prefix="shiro" uri="http://shiro.apache.org/tags" %>
+<%@taglib prefix="shiro" uri="http://shiro.apache.org/tags" %>
 <%@taglib tagdir="/WEB-INF/tags" prefix="cus" %>
+#if(${jspFulled})
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,7 +11,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-#parse("template/velocity/jspComponent.vm")
     <meta name="description" content="">
     <meta name="author" content="">
 	<cus:Css/>
@@ -22,6 +22,8 @@
     *#
   </head>
   <body>
+#end
+#parse("template/velocity/jspComponent.vm")
 <div class="container-fluid">
 #**
 <div class="row show-grid">
@@ -126,7 +128,7 @@
 		    <div class="row">
 				<div class="col-md-12">
 					#foreach( $column in $entity.tableColumns)
-						#if( ${column.editRender.show} )
+						#if( ${column.editRender.show} || ${column.primary} )
 							${column.editRender.render}
 						#end
 					#end
@@ -160,7 +162,9 @@
   </div>
 </div>
 
+#if(${jspFulled})
 <cus:JavaScript/>
+#end
 <script type="text/javascript">
 $(document).ready(function(){
 	/**
@@ -397,5 +401,7 @@ $(document).ready(function(){
 	});
 });
 </script>
+#if(${jspFulled})
 </body>
 </html>
+#end
