--- a/src/main/resources/template/velocity/bootstrap/datatables/BootstrapDataTableJsp.vm
+++ b/src/main/resources/template/velocity/bootstrap/datatables/BootstrapDataTableJsp.vm
@@ -92,7 +92,8 @@
     <div class="col-sm-12 col-md-12">
     <div class="panel panel-default">
 	  <!-- Default panel contents -->
-	  <shiro:hasPermission name="">
+	  #if(${entity.showPermission})<shiro:hasPermission name="${entity.editPermission}">#end
+	  
 	  <div class="panel-heading">
 	  	   <div class="row">
 	    		<div class="col-lg-2">
@@ -101,7 +102,8 @@
 	    		</div>
 	    	</div>
 	  </div>
-	  </shiro:hasPermission>
+	  #if(${entity.showPermission})</shiro:hasPermission>#end
+	  
         <table id="${jspDatatableId}" class="table table-striped table-bordered" style="margin-top:0px !important" width="100%" cellspacing="0">
 		 <thead>
 				 <tr>
@@ -160,9 +162,11 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-        <shiro:hasPermission name="">
+        #if(${entity.showPermission})<shiro:hasPermission name="${entity.editPermission}">#end
+        
         <button type="button" class="btn btn-primary ${entity.entityBeanName}save">保存</button>
-        </shiro:hasPermission>
+        #if(${entity.showPermission})</shiro:hasPermission>#end
+        
       </div>
     </div>
     </form>
@@ -174,10 +178,14 @@
 #end
 <script type="text/javascript">
 $(document).ready(function(){
+	#if(${entity.showPermission})
 	var edit = false;
-	<shiro:hasPermission name="">
+	<shiro:hasPermission name="${entity.editPermission}">
 	edit = true;
 	</shiro:hasPermission>
+	#else
+	var edit = true;
+	#end
 	
 	/**
 	 * datatables表格数据;
