--- a/src/main/resources/template/velocity/bootstrap/datatables/BootstrapDataTableJsp.vm
+++ b/src/main/resources/template/velocity/bootstrap/datatables/BootstrapDataTableJsp.vm
@@ -57,7 +57,7 @@
 <div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3</div>
 </div>
 *#
-<ol class="breadcrumb">
+<ol class="breadcrumb" style="margin-bottom:0">
   <li class="active">${entity.tableCommon}</li>
 </ol>
 #if( ${entity.queryFormRender.show} )
