--- a/src/main/resources/template/velocity/mybatis/3.0/SqlMapIDao.vm
+++ b/src/main/resources/template/velocity/mybatis/3.0/SqlMapIDao.vm
@@ -34,6 +34,11 @@ public interface ${sqlMapIDaoJavaClassName} {
 	public void ${deleteMethodPrefix}${entity.entityBeanName}(java.util.Map<java.lang.String, java.lang.Object> params);
 	
 	/**
+	 * find pojo list;
+	 */
+	public java.util.List<java.util.Map<java.lang.String, java.lang.Object>> find${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj);
+	
+	/**
 	 * query pojo list;
 	 */
 	public java.util.List<java.util.Map<java.lang.String, java.lang.Object>> ${queryMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj);
