--- a/src/main/resources/template/velocity/SqlMapIService.vm
+++ b/src/main/resources/template/velocity/SqlMapIService.vm
@@ -2,7 +2,6 @@
  * 
  */
 package ${serviceFullPackageName};
-#parse("template/velocity/fun.vm")
 
 /**
  * autogen
@@ -10,42 +9,6 @@ package ${serviceFullPackageName};
  * ${entity.tableCommon} service interface;
  * @date ${date}
  */
-public interface ${sqlMapIServiceJavaClassName} {
+public interface ${sqlMapIServiceJavaClassName} extends ${serviceFullPackageName}.base.${sqlMapBaseServiceJavaClassName} {
 	
-	/**
-	 * save pojo;
-	 * @param obj
-	 */
-	public void ${saveMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj);
-	
-	/**
-	 * update pojo;
-	 * @param obj
-	 */
-	public void ${updateMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj);
-	
-	/**
-	 * get pojo by pk;
-	 */
-	public ${pojoFullPackageName}.${entity.entityBeanName} ${getMethodPrefix}${entity.entityBeanName}(#pks_argument(${entity.tableColumns}));
-	
-	/**
-	 * delete pojo by pk;
-	 */
-	public void ${deleteMethodPrefix}${entity.entityBeanName}(#pks_argument_array(${entity.tableColumns}));
-	
-	/**
-	 * find pojo list;
-	 */
-	public java.util.List<java.util.Map<java.lang.String, java.lang.Object>> find${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj);
-	
-	/**
-	 * query pojo list;
-	 */
-	public java.util.List<java.util.Map<java.lang.String, java.lang.Object>> ${queryMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj);
-	
-	/**
-	 * query paging pojo list;
-	 */
-	public ${idataCollectionPackageName}.IDataCollection<java.util.Map<java.lang.String, java.lang.Object>> ${queryPagingMethodPrefix}${entity.entityBeanName}(${pojoFullPackageName}.${entity.entityBeanName} obj, ${pagingPackageName}.Paging paging);
 }
